# Proyecto

./: CMakeLists.txt  generate_vs.bat
include/: App.h  Camera.h  EBO.h  Model.h  Terrain.h  Texture.h  VAO.h  VBO.h  Water.h  shaderClass.h
shaders/: basic.fs  basic.vs  skybox.fs  skybox.vs  terrain.fs  terrain.vs  water.fs  water.vs
src/: App.cpp  Camera.cpp  EBO.cpp  Model.cpp  Terrain.cpp  Texture.cpp  VAO.cpp  VBO.cpp  Water.cpp  shaderClass.cpp  stb.cpp
